Footer is in place and fixed issue of overflow and positioning of span-6 elements.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,7 +8,6 @@ html, body { height: 100%; }
 
 .span-6 {
   float: left;
-  position: relative;
   padding-left: 15px;
   padding-right: 15px;
 }
